--- a/trunk/ land-cost/LandCost/LandCost.csproj
+++ b/trunk/ land-cost/LandCost/LandCost.csproj
@@ -58,15 +58,15 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Reports\Certification.cs">
+    <Compile Include="Reports\CertificationExt.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Certification.rpt</DependentUpon>
+      <DependentUpon>CertificationExt.rpt</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
-    <EmbeddedResource Include="Reports\Certification.rpt">
+    <EmbeddedResource Include="Reports\CertificationExt.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
-      <LastGenOutput>Certification.cs</LastGenOutput>
+      <LastGenOutput>CertificationExt.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
@@ -134,7 +134,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>IF NOT EXIST $(TargetDir)Reports MKDIR $(TargetDir)Reports 
-COPY /Y $(ProjectDir)Reports\Certification.rpt $(TargetDir)Reports\Certification.rpt</PostBuildEvent>
+COPY /Y $(ProjectDir)Reports\CertificationExt.rpt $(TargetDir)Reports\CertificationExt.rpt</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
