--- a/trunk/ land-cost/LandCost.Forms/LandCost.Forms.csproj
+++ b/trunk/ land-cost/LandCost.Forms/LandCost.Forms.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controls\EditedListView\ListViewColumnSorter.cs" />
     <Compile Include="Forms\CertificationForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -89,10 +90,10 @@
     <Compile Include="Controls\DecimalTextBox\DecimalTextBox.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Controls\EditedListView.cs">
+    <Compile Include="Controls\EditedListView\EditedListView.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Controls\EditedListView.Designer.cs">
+    <Compile Include="Controls\EditedListView\EditedListView.Designer.cs">
       <DependentUpon>EditedListView.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\DocumentForm.cs">
@@ -127,7 +128,7 @@
     <Compile Include="Forms\FunctionalUsageCoefficientsForm.Designer.cs">
       <DependentUpon>FunctionalUsageCoefficientsForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="IEditor.cs" />
+    <Compile Include="Interfaces\IEditor.cs" />
     <Compile Include="Forms\LocalCoefficientForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -146,7 +147,7 @@
     <Compile Include="Forms\ProgressForm.Designer.cs">
       <DependentUpon>ProgressForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="IModificationAnnouncer.cs" />
+    <Compile Include="Interfaces\IModificationAnnouncer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Forms\RegionForm.cs">
       <SubType>Form</SubType>
@@ -187,7 +188,7 @@
     <EmbeddedResource Include="Controls\ProfileControl.resx">
       <DependentUpon>ProfileControl.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Controls\EditedListView.resx">
+    <EmbeddedResource Include="Controls\EditedListView\EditedListView.resx">
       <DependentUpon>EditedListView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ConfigurationForm.resx">
