--- a/ land-cost/LandCost/LandCost.csproj
+++ b/ land-cost/LandCost/LandCost.csproj
@@ -191,9 +191,11 @@
     <Service Include="{C0C07587-41A7-46C8-8FBD-3F9C8EBE2DDC}" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="coins.ico" />
     <None Include="Resources\coins.png" />
     <None Include="Resources\Splash.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="coins.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
