--- a/ land-cost/LandCost.Forms/LandCost.Forms.csproj
+++ b/ land-cost/LandCost.Forms/LandCost.Forms.csproj
@@ -133,6 +133,12 @@
     <Compile Include="Controls\EditedListView\EditedListView.Designer.cs">
       <DependentUpon>EditedListView.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Certification2017Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Certification2017Form.Designer.cs">
+      <DependentUpon>Certification2017Form.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\DocumentForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -236,6 +242,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ConfigurationForm.resx">
       <DependentUpon>ConfigurationForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Certification2017Form.resx">
+      <DependentUpon>Certification2017Form.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\DocumentForm.resx">
       <DependentUpon>DocumentForm.cs</DependentUpon>
